--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -431,8 +431,14 @@ body{
   min-height: 480px;
   margin-bottom: 20px;
   position: relative;
+  filter: alpha(opacity=50);
+	opacity: 0.5;
   color: #333;
+  filter: alpha(opacity=0);
+  opacity: 0;
   @include box-shadow(-3px, 3px, 21px, rgba(#242424, 0.25));
+
+
 
   .img{
     border: solid 2px white;
@@ -448,4 +454,29 @@ body{
     bottom: 0px;
     width: 91%;
   }
+}
+
+@keyframes Items{
+  0%{
+    filter: alpha(opacity=0);
+  	opacity: 0;
+    transform: scale(0.3) rotateY(90deg);
+  }
+
+  70%{
+    transform: scale(0.9) rotateY(90deg);
+      height: 0%;
+  }
+
+  100%{
+    filter: alpha(opacity=100);
+  	opacity: 1;
+  }
+}
+
+.panel-result.is-visible{
+    filter: alpha(opacity=100);
+    opacity: 1;
+    border-bottom:solid 4px white;
+    animation: Items 200ms ease-in
 }
