--- a/app/views/layouts/_nav_dev.html.erb
+++ b/app/views/layouts/_nav_dev.html.erb
@@ -15,7 +15,7 @@
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav ">
+            <ul class="nav navbar-nav">
                 <li>
                     <%= link_to "Games", games_path	 %>
                 </li>
@@ -30,14 +30,15 @@
                   <%= render 'layouts/form_search' %>
               </li>
               <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" style="color: white" aria-expanded="false">
-                      <span class="caret"></span>My Profile</a>
-                  <ul class="dropdown-menu">
-                      <li><%= link_to "Game Overview", games_path %></li>
-                      <li><%= link_to "Upload", new_game_path %></li>
-                      <li><%= link_to "Key Mapping", root_path %></li>
-                      <li><%= link_to "Sign Out", sessions_path, method: :delete %></li>
-                  </ul>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" style="color: white" aria-expanded="false">
+                  <span class="caret"></span>My Profile
+                </a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Game Overview", games_path %></li>
+                  <li><%= link_to "Upload", new_game_path %></li>
+                  <li><%= link_to "Key Mapping", root_path %></li>
+                  <li><%= link_to "Sign Out", sessions_path, method: :delete %></li>
+                </ul>
               </li>
             </ul>
         </div>
