--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="header">
     <div class="col-md-6 text-center" >
-      <%= image_tag "arcade-machines.png", :class => "image-resp" %>
+      <%= image_tag "arcade-machines.png", :class => "image-resp fade-in" %>
     </div>
     <div class="col-md-5">
       <div class="row">
