--- a/app/views/layouts/_nav_dev.html.erb
+++ b/app/views/layouts/_nav_dev.html.erb
@@ -26,7 +26,7 @@
 
             <ul class="nav navbar-nav navbar-right">
               <li class="game-search">
-                  <span class="glyphicon glyphicon-search text-right" id="search"></span>
+                  <span class="glyphicon glyphicon-search text-right fade-in" id="search"></span>
                   <%= render 'layouts/form_search' %>
               </li>
               <li class="dropdown">
