--- a/app/views/games/_show_dev.html.erb
+++ b/app/views/games/_show_dev.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 <h1 style="font-weight:bold; margin-bottom: 20px; color: #EF7030;">Game Title: <%= @game.title %></h1>
-  <h3>General Ratings: <%= @game.reviews_count %> feedbacks</h3>
+  <h3>General Ratings: <%= @game.reviews.count %> feedbacks</h3>
   <%= link_to 'download pdf', game_review_path(@game.id), class: "orange"%> |
    <%= link_to 'download game', @game.attachment_url, class: "orange"%>
 
