--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,7 +84,7 @@ a:hover {
 
 .navbar.navbar-default.navbar-fixed-top {
     border-bottom-width: 0px;
-  }
+}
 
 #logo-container a {
   width: 100%;
@@ -128,46 +128,11 @@ a:hover {
 // END NAVBAR STYLING
 
 // FOOTER
-
-.home-footer {
-  height: 200px;
-  width: 100%;
-  overflow: hidden;
-  bottom: 0px;
-  left: 0px;
-  background-color: #003c62;
-  text-align: center;
-  font-family: 'Prompt', sans-serif;
-  color: white;
-  font-size: 12px;
-}
-
-.home-footer-left div {
-  margin-top: 15px;
-}
-.home-footer-right div {
-  margin-top: 15px;
+.footer, .push {
+  min-height: 70px; /* .push must be the same height as .footer */
 }
 
 
-.home-footer-left {
-  float: left;
-  text-align: left;
-  margin-left: 40px;
-  width: 30%;
-}
-
-.home-footer-right {
-  float: right;
-  text-align: right;
-  margin-right: 40px;
-  width: 30%;
-  font-size: 12px;
-  text-decoration: none;
-}
-.codecore-logo{
-  height: 50px;
-}
 
 // Search
 #search-wrapper {
