--- a/app/views/games/_index_admin.html.erb
+++ b/app/views/games/_index_admin.html.erb
@@ -10,9 +10,9 @@
                     <%= link_to g.user.company, user_path(g.user) %></p>
                 <hr style="border-color: #333;">
                 <% g.tags.each do |t| %>
-                <p class="tag-boxes">
+                <span class="tag-boxes">
                     <%= t.name %>
-                </p>
+                </span>
                 <% end %>
             <p class="game-aasm_state" style="color: #45A056; font-weight: bold; margin-top: 15px;"><%= g.aasm_state %></p>
             </div>
