--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
         </div>
         <div class="col-sm-5 col-md-5  col-xs-6 text-left">
           </br></br>
-           <%= link_to "Submit your game!", new_user_path, class: "btn btn-default btn-lg pop btn" %>
+           <%= link_to "Submit your game!", new_game_path, class: "btn btn-default btn-lg pop btn" %>
         </div>
         <div class="col-md-12 col-xs-12">
           <div class="search-container border-radius">
