Social media size increased

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -370,7 +370,8 @@ body{
   padding-top: 20px;
   display: block;
   margin: auto;
-  padding-top: 20px;
+  padding-top: 10px;
+  font-size: 25px;
 }
 
 @media screen and (max-width: 750px) {
