--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,7 +13,7 @@
             <div class="footer-list col-sm-2 col-xs-4 text-center">
                 <%= link_to "FAQ", faq_path %>
             </div>
-            <div class='footer-social col-xs-12 col-sm-offset-1 col-sm-3'>
+            <div class='footer-social col-xs-12 col-sm-4'>
                 <center>
                     <i class="fa fa-facebook-official" aria-hidden="true"></i>
                     &nbsp;&nbsp;&nbsp;
