add draper, generate Game decorator and refactor _show_admin file

--- a/app/views/games/_index_admin.html.erb
+++ b/app/views/games/_index_admin.html.erb
@@ -1,27 +1,27 @@
 <h1 class="games-index-h1">Games Requiring Review</h1>
 <% if @games.present? %>
-    <% @games.each do |g|  %>
+  <% @games.each do |g|  %>
     <div class="wrapper">
-        <div class="one"><%= display_picture g %></div>
-        <div class="two">
-            <h2><%= link_to g.title, game_path(g), class: "game-title" %></h2>
-            <div>
-                <p class ="gamer-details-author">made by:
-                    <%= link_to g.user.company, user_path(g.user) %></p>
-                <hr style="border-color: #333;">
-                <% g.tags.each do |t| %>
-                <span class="tag-boxes">
-                    <%= t.name %>
-                </span>
-                <% end %>
-            <p class="game-aasm_state" style="color: #45A056; font-weight: bold; margin-top: 15px;"><%= g.aasm_state %></p>
-            </div>
+      <div class="one"><%= display_picture g %></div>
+      <div class="two">
+        <h2><%= link_to g.title, game_path(g), class: "game-title" %></h2>
+        <div>
+          <p class ="gamer-details-author">made by:
+            <%= link_to g.user.company, user_path(g.user) %></p>
+          <hr style="border-color: #333;">
+          <% g.tags.each do |t| %>
+            <p class="tag-boxes">
+              <%= t.name %>
+            </p>
+          <% end %>
+        <p class="game-aasm_state" style="color: #45A056; font-weight: bold; margin-top: 15px;"><%= g.aasm_state %></p>
         </div>
+      </div>
     </div>
-    <!-- </div> -->
-    <% end %>
+  <% end %>
 </div>
 <% else %>
-<p>There are no matches for your search</p>
+  <p>There are no matches for your search</p>
 <% end %>
+
 <%= paginate @games %>
