--- a/app/views/games/_show_admin.html.erb
+++ b/app/views/games/_show_admin.html.erb
@@ -1,21 +1,14 @@
 <h2 style="font-weight:bold; margin-bottom: 20px; color: #EF7030;"><%= @game.title %></h2>
- <p class="char1">Made by: <%= @game.user.company %></p>
- <div>
-   <p>Date: <%= @game.created_at %></p>
-   <p>Type:
-   <% @game.taggings.map do |tagging| %>
-     <%= Tag.find(tagging.tag_id).name %> &nbsp;|&nbsp;
-   <% end %>
-  </p>
-   <p>Last in Arcade: <%= @game.reviews.last ? @game.reviews.last.created_at : "Never" %></p>
-   <p>Played: <%= @game.reviews.count %> times</p>
-   <p>Overall Rating: <%= @game.reviews.count %></p>
-     <p>
-       Send email to developer about the game:
-     </p>
- <div class="btn">
-   <%= button_to "Download Game", game_path(@game), method: :get %>
- </div>
+ <p class="char1">Made by: <%= @game.user_company %></p>
+ <p>Date: <%= @game.formatted_created_at %></p>
+ <p>Type: <%= @game.type_display %></p>
+ <p>Last in Arcade: <%= @game.last_in_arcade %></p>
+ <p>Played: <%= @game.reviews_count %> times</p>
+ <p>Overall Rating: <%= @game.reviews_count %></p>
+ <p>
+   Send email to developer about the game:
+ </p>
+ <%= @game.download_button %>
  <div class="radiolist">
    <%= simple_form_for(@game) do |f| %>
      <%= f.error_notification %>
@@ -27,4 +20,3 @@
      </div>
    <% end %>
  </div>
-@game.reviews.count
