--- a/app/views/games/_show_dev.html.erb
+++ b/app/views/games/_show_dev.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
 <h1 style="font-weight:bold; margin-bottom: 20px; color: #EF7030;">Game Title: <%= @game.title %></h1>
-  <h3>General Ratings: <%= @reviews.count %> feedbacks</h3>
+  <h3>General Ratings: <%= @game.reviews_count %> feedbacks</h3>
   <%= link_to 'download pdf', game_review_path(@game.id), class: "orange"%> |
    <%= link_to 'download game', @game.attachment_url, class: "orange"%>
 
   <div style="text-align: center"><h3>Overview</h3></div>
-  <h3><%= pluralize @game.reviews.count, "Plays" %></h3>
-  <% if @game.reviews.count > 0 %>
+  <h3><%= pluralize @game.reviews_count, "Plays" %></h3>
+  <% if @game.reviews_count > 0 %>
     <h4>Fun</h4>
     <div class="progress">
       <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow=""
