--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,6 +23,6 @@
 </div>
 
   <div class="form-actions register-form-group">
-    <%= f.button :submit, class: "btn btn-default register-button" %>
+    <%= f.button :submit, value: "Signup", class: "btn btn-default register-button" %>
   </div>
 <% end %>
