--- a/app/views/games/_index_dev.html.erb
+++ b/app/views/games/_index_dev.html.erb
@@ -10,13 +10,15 @@
             <%= t.name %>
         </span>
         <% end %>
+        <% if g.user == current_user %>
             <p class="game-aasm_state" style="color: #45A056; font-weight: bold; margin-top: 15px;"><%= g.aasm_state %></p>
-        <p class="pull-left" style="margin-right:20px; margin-bottom:20px;"><%=  link_to "Feedback", game_path(g), :class=>"btn btn-primary" %>
+            <p class="pull-left" style="margin-right:20px; margin-bottom:20px;"><%=  link_to "Feedback", game_path(g), :class=>"btn btn-primary" %>
             <%= link_to "Update", edit_game_path(g), :class=>"btn btn-primary" %>
             <%= link_to "Controller Keys", new_game_key_path(g), :class=>"btn btn-primary" %>
             <%= link_to "Remove", game_path(g),
                                  method: :delete,
                                  data: {confirm: 'Are you sure?'}, :class=>"btn btn-primary" %></p>
+            <% end %>
         <br>
         <br>
     </div>
