--- a/app/views/games/_index_admin.html.erb
+++ b/app/views/games/_index_admin.html.erb
@@ -1,9 +1,8 @@
 <h1 class="games-index-h1">Games List</h1>
 <%= form_tag(games_path, method: 'get', id: 'aasm_search') do %>
- <%= collection_select :search_state,nil, @states, :to_s,:to_s, include_blank: true, selected: @state %>
- <%= submit_tag "Submit", id: "search-for-status" %>
+  <%= collection_select :search_state, nil, @states, :to_s, :to_s,  include_blank: true, selected: @state %>
+  <%= submit_tag "Submit", id: "search-for-status" %>
 <% end %>
-
 <% if @games.present? %>
   <% @games.each do |g|  %>
     <div class="wrapper">
@@ -11,22 +10,20 @@
       <div class="two">
         <h2><%= link_to g.title, game_path(g), class: "game-title" %></h2>
         <div>
-          <p class ="gamer-details-author">made by:
-            <%= link_to g.user.company, user_path(g.user) %></p>
+          <p class ="gamer-details-author">
+            made by: <%= link_to g.user.company, user_path(g.user) %></p>
           <hr style="border-color: #333;">
           <% g.tags.each do |t| %>
             <p class="tag-boxes">
               <%= t.name %>
             </p>
           <% end %>
-        <p class="game-aasm_state" style="color: #45A056; font-weight: bold; margin-top: 15px;"><%= g.aasm_state %></p>
+          <p class="game-aasm_state" style="color: #45A056; font-weight: bold; margin-top: 15px;"><%= g.aasm_state %></p>
         </div>
       </div>
     </div>
   <% end %>
-</div>
 <% else %>
   <p>There are no matches for your search</p>
 <% end %>
-
 <%= paginate @games %>
