--- a/app/views/games/_show_admin.html.erb
+++ b/app/views/games/_show_admin.html.erb
@@ -1,24 +1,24 @@
 <h2 style="font-weight:bold; margin-bottom: 20px; color: #EF7030;"><%= @game.title %></h2>
- <p class="char1">Made by: <%= @game.user_company %></p>
- <p>Date: <%= @game.formatted_created_at %></p>
- <p>Type: <%= @game.type_display %></p>
- <p>Last in Arcade: <%= @game.last_in_arcade %></p>
- <p>Played: <%= @game.reviews_count %> times</p>
- <p>Overall Rating: <%= @game.reviews_count %></p>
- <p>
-   Send email to developer about the game:
- </p>
- <%= @game.download_button %>
- <div class="radiolist">
-   <%= simple_form_for(@game) do |f| %>
-     <%= f.error_notification %>
-     <div>
-       <% if @game.may_approve?  %>
-        <%= f.button :submit, 'Approve' %>
-       <% end %>
-       <% if @game.may_reject? %>
-        <%= f.button :submit, 'Reject' %>
-       <% end %>
-     </div>
-   <% end %>
- </div>
+<p class="char1">Made by: <%= @game.user_company %></p>
+<p>Date: <%= @game.formatted_created_at %></p>
+<p>Type: <%= @game.type_display %></p>
+<p>Last in Arcade: <%= @game.last_in_arcade %></p>
+<p>Played: <%= @game.reviews_count %> times</p>
+<p>Overall Rating: <%= @game.reviews_count %></p>
+<p>
+  Send email to developer about the game:
+</p>
+<%= @game.download_button %>
+<div class="radiolist">
+  <%= simple_form_for(@game) do |f| %>
+    <%= f.error_notification %>
+    <div>
+      <% if @game.may_approve?  %>
+        <%= f.button :submit, Game::STATE_APPROVE %>
+      <% end %>
+      <% if @game.may_reject? %>
+        <%= f.button :submit, Game::STATE_REJECT %>
+      <% end %>
+    </div>
+  <% end %>
+</div>
