--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,18 +1,20 @@
-<div id="about-header-image"></div>
+<center>
+  <h1>About Us</h1>
+</center>
 <div id="about-text-wrapper">
   <div class="container" id="about-us">
     <h4 id="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
     </div>
 </div>
-<div id="team-background">
-  <h1 id="team-text">Meet the team behind this initiative</h1>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-3 col-sm-6 col-xs-12"><div id="rod1" class="rod-photo"></div><h4>Roderick Fung<br>aka "Party Boy"</h4></div>
-      <div class="col-md-3 col-sm-6 col-xs-12"><div id="rod2" class="rod-photo"></div><h4>Roderick Fung<br>aka "Duck Face"</h4></div>
-      <div class="col-md-3 col-sm-6 col-xs-12"><div id="rod3" class="rod-photo"></div><h4>Roderick Fung<br>aka "Macho Man"</h4></div>
-      <div class="col-md-3 col-sm-6 col-xs-12"><div id="rod4" class="rod-photo"></div><h4>Roderick Fung<br>aka "Sleeping Beauty"</h4></div>
-    </div>
-  </div>
 
+<center>
+  <h1 id="team-text">Meet the team behind this initiative</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3 col-sm-6 col-xs-12"><div id="pic1" class="about-team-pic"></div><h4>Lucy Heartfilia<br>Anime Character</h4></div>
+    <div class="col-md-3 col-sm-6 col-xs-12"><div id="pic2" class="about-team-pic"></div><h4>Shinji<br>Anime Character</h4></div>
+    <div class="col-md-3 col-sm-6 col-xs-12"><div id="pic3" class="about-team-pic"></div><h4>Asami Akimoto<br>Anime Character</h4></div>
+    <div class="col-md-3 col-sm-6 col-xs-12"><div id="pic4" class="about-team-pic"></div><h4>Lelouch Vi Britannia<br>Anime Character</h4></div>
+  </div>
 </div>
+</center>
