--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #allmess {
-  background-image: url("gungeonfirst.jpg");
+  background-image: image-url("gungeonfirst.jpg");
   background-size: cover;
   font-size: 18px;
   height: 1000px;
