--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -57,7 +57,7 @@ input#file-display.input-large.uneditable-input {
 // Styling for show page
 #developer-page-wrapper {
   padding-top: 60px;
-  background-image: url('profile-dev-bg.jpg');
+  background-image: image-url('profile-dev-bg.jpg');
   background-size: contain;
   background-repeat: no-repeat;
   background-color: #816989;
